# open-in-firefox-container

./: .gitignore  Cargo.toml  README.md  build.rs
macos/: Info.plist  build_osx_app  osx.m
src/: main.rs  osx_main.rs
