[package]
name = "open-in-firefox-container"
version = "0.1.0"
authors = ["Roy Wellington Ⅳ <cactus_hugged@yahoo.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "^2.0.2"
serde = {version = "^1.0.103", features = ["derive"]}
serde_urlencoded = "^0.6.1"
structopt = "^0.3.5"
toml = "^0.5.5"

[target.'cfg(target_os = "macos")'.dependencies]
once_cell = "^1.2.0"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "^1.0.47"
